--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "homepage": "https://github.com/ismorozs/histocher#readme",
   "devDependencies": {
-    "couli": "0.0.11",
-    "html-loader": "^0.5.5",
+    "couli": "0.1.1",
+    "html-loader": "0.5.5",
     "webextension-polyfill": "0.4.0",
     "webpack": "4.35.3",
     "webpack-cli": "3.3.5"
