--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "homepage": "https://github.com/ismorozs/histocher#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^13.0.1",
     "couli": "0.1.1",
-    "html-loader": "0.5.5",
-    "webextension-polyfill": "0.4.0",
-    "webpack": "4.35.3",
-    "webpack-cli": "3.3.5"
+    "html-loader": "5.1.0",
+    "webextension-polyfill": "0.12.0",
+    "webpack": "5.103.0",
+    "webpack-cli": "6.0.1"
   }
 }
